Add drip campaign styles and update content

--- a/index.html
+++ b/index.html
@@ -236,6 +236,42 @@
       color: var(--brycer-navy);
     }
 
+    /* Drip rows under each quarter */
+    .drip-row {
+      margin-top: 4px;
+      margin-bottom: 16px;
+      border-radius: 10px;
+      border: 1px dashed var(--brycer-border);
+      background: var(--brycer-grey-light);
+      padding: 8px 10px;
+      font-size: 0.78rem;
+    }
+
+    .drip-title {
+      font-size: 0.8rem;
+      font-weight: 600;
+      color: var(--brycer-navy);
+      text-transform: uppercase;
+      letter-spacing: 0.08em;
+      margin-bottom: 2px;
+    }
+
+    .drip-line {
+      margin-top: 2px;
+      color: var(--text-main);
+    }
+
+    .drip-line strong {
+      font-weight: 600;
+      color: var(--brycer-navy);
+    }
+
+    .drip-note {
+      margin-top: 3px;
+      color: var(--text-muted);
+      font-size: 0.76rem;
+    }
+
     footer {
       margin-top: 22px;
       padding-top: 10px;
@@ -333,7 +369,7 @@
             <div class="stream-row">
               <div class="stream-label">Prospects</div>
               <div class="stream-text">
-                Continue Q1 Visibility A/B – resend winning variant + begin <strong>cold / warm / high intent drips</strong> by region & tier.
+                Continue Q1 Visibility A/B – resend winning variant + continue <strong>state outreach</strong> across regions and tiers.
               </div>
             </div>
             <div class="stream-row">
@@ -359,7 +395,7 @@
             <div class="stream-row">
               <div class="stream-label">Prospects</div>
               <div class="stream-text">
-                Final Q1 Visibility wave + drips reinforcing discovery load (“cities like Huntsville uncovered 4,369 systems…”).
+                Final Q1 Visibility outreach plus <strong>Q1 VISIBILITY drips</strong> to move leads into Q2.
               </div>
             </div>
             <div class="stream-row">
@@ -381,6 +417,23 @@
               </div>
             </div>
           </div>
+        </div>
+      </div>
+
+      <!-- Q1 Drip row -->
+      <div class="drip-row">
+        <div class="drip-title">Q1 Drip Campaigns – Visibility</div>
+        <div class="drip-line">
+          <strong>January:</strong> No drip – focus on state outreach only (region × population).
+        </div>
+        <div class="drip-line">
+          <strong>February:</strong> No drip – continue state outreach and A/B testing.
+        </div>
+        <div class="drip-line">
+          <strong>March:</strong> Cold, Warm, and High Intent <strong>Visibility drips</strong> all run in Weeks 10–12 (last 2–3 weeks of the quarter).
+        </div>
+        <div class="drip-note">
+          All three drips close out Q1 and move engaged and non-engaged leads into Q2 Efficiency messaging.
         </div>
       </div>
     </section>
@@ -459,7 +512,7 @@
             <div class="stream-row">
               <div class="stream-label">Prospects</div>
               <div class="stream-text">
-                Wrap Q2 outreach + drips – reinforce “remove admin burden” and RR success stories.
+                Wrap Q2 outreach plus <strong>Q2 EFFICIENCY drips</strong> at the end of the quarter.
               </div>
             </div>
             <div class="stream-row">
@@ -481,6 +534,23 @@
               </div>
             </div>
           </div>
+        </div>
+      </div>
+
+      <!-- Q2 Drip row -->
+      <div class="drip-row">
+        <div class="drip-title">Q2 Drip Campaigns – Efficiency</div>
+        <div class="drip-line">
+          <strong>April:</strong> No drip – focus on Q2 Efficiency state outreach and launch.
+        </div>
+        <div class="drip-line">
+          <strong>May:</strong> No drip – continue outreach and A/B, build audience for end-of-quarter drips.
+        </div>
+        <div class="drip-line">
+          <strong>June:</strong> Cold, Warm, and High Intent <strong>Efficiency drips</strong> all run in Weeks 10–12 (last 2–3 weeks of June).
+        </div>
+        <div class="drip-note">
+          All drips fire at the end of June, reinforcing the “remove administrative burden” story and setting up Q3 Compliance.
         </div>
       </div>
     </section>
@@ -545,7 +615,7 @@
             <div class="stream-row">
               <div class="stream-label">Customer Upsell</div>
               <div class="stream-text">
-                Monthly upsell – pull in Huntsville-style outcomes (e.g., 86% compliance) as proof points.
+                Monthly upsell – pull in Huntsville-style outcomes (for example, 86% compliance) as proof points.
               </div>
             </div>
           </div>
@@ -559,7 +629,7 @@
             <div class="stream-row">
               <div class="stream-label">Prospects</div>
               <div class="stream-text">
-                Final Q3 wave – emphasize data for leadership, ISO and accreditation readiness.
+                Final Q3 wave – emphasize data for leadership, ISO and accreditation readiness, plus <strong>Q3 COMPLIANCE drips</strong>.
               </div>
             </div>
             <div class="stream-row">
@@ -581,6 +651,23 @@
               </div>
             </div>
           </div>
+        </div>
+      </div>
+
+      <!-- Q3 Drip row -->
+      <div class="drip-row">
+        <div class="drip-title">Q3 Drip Campaigns – Compliance</div>
+        <div class="drip-line">
+          <strong>July:</strong> No drip – focus on launching Q3 Compliance outreach and baseline narrative.
+        </div>
+        <div class="drip-line">
+          <strong>August:</strong> No drip – continue outreach, A/B, and deepen case-study proof.
+        </div>
+        <div class="drip-line">
+          <strong>September:</strong> Cold, Warm, and High Intent <strong>Compliance drips</strong> all run in Weeks 10–12 (late September).
+        </div>
+        <div class="drip-note">
+          These drips reinforce jurisdiction-wide compliance outcomes and tee up modernization conversations for Q4.
         </div>
       </div>
     </section>
@@ -659,7 +746,7 @@
             <div class="stream-row">
               <div class="stream-label">Prospects</div>
               <div class="stream-text">
-                Final Q4 touches – “prepare your compliance program for 2026” narrative and planning CTAs.
+                Final Q4 touches – “prepare your compliance program for 2026” narrative and planning CTAs plus <strong>Q4 MODERNIZATION drips</strong>.
               </div>
             </div>
             <div class="stream-row">
@@ -683,10 +770,27 @@
           </div>
         </div>
       </div>
+
+      <!-- Q4 Drip row -->
+      <div class="drip-row">
+        <div class="drip-title">Q4 Drip Campaigns – Modernization</div>
+        <div class="drip-line">
+          <strong>October:</strong> No drip – focus on Q4 Modernization state outreach and future-proofing story.
+        </div>
+        <div class="drip-line">
+          <strong>November:</strong> No drip – continue outreach, A/B variants, and year-end planning messaging.
+        </div>
+        <div class="drip-line">
+          <strong>December:</strong> Cold, Warm, and High Intent <strong>Modernization drips</strong> run slightly earlier in the quarter (Weeks 9–10) in early December.
+        </div>
+        <div class="drip-note">
+          Drips go earlier because December inboxes get noisy, staffing drops, and holidays reduce engagement – still end-of-quarter, just pulled forward.
+        </div>
+      </div>
     </section>
 
     <footer>
-      <div><strong>Backed by BRYCER.</strong> Turning Reports into Results.</div>
+      <div><strong>Powered by BRYCER.</strong> Turning Reports into Results.</div>
       <div></div>
     </footer>
   </div>
