Remove service provider rows and styles from index.html
Removed service provider rows and related styles from Q1, Q2, Q3, and Q4 sections.

--- a/index.html
+++ b/index.html
@@ -285,57 +285,6 @@
       font-size: 0.76rem;
     }
 
-    /* Service Provider rows under each quarter */
-    .sp-row {
-      margin-top: 6px;
-      margin-bottom: 16px;
-      border-radius: 10px;
-      border: 1px solid var(--brycer-border);
-      background: #ffffff;
-      padding: 8px 10px;
-      font-size: 0.78rem;
-      box-shadow: 0 3px 10px rgba(3, 35, 61, 0.04);
-    }
-
-    .sp-title {
-      font-size: 0.8rem;
-      font-weight: 600;
-      color: var(--brycer-navy);
-      text-transform: uppercase;
-      letter-spacing: 0.08em;
-      margin-bottom: 4px;
-    }
-
-    .sp-line {
-      margin-top: 3px;
-      color: var(--text-main);
-    }
-
-    .sp-line strong {
-      font-weight: 600;
-      color: var(--brycer-navy);
-    }
-
-    .sp-pill {
-      display: inline-flex;
-      align-items: center;
-      gap: 4px;
-      font-size: 0.75rem;
-      font-weight: 600;
-      color: var(--brycer-navy);
-      background: var(--brycer-blue-light);
-      border-radius: 999px;
-      padding: 2px 8px;
-      margin-right: 6px;
-      margin-top: 2px;
-    }
-
-    .sp-note {
-      margin-top: 3px;
-      color: var(--text-muted);
-      font-size: 0.76rem;
-    }
-
     footer {
       margin-top: 22px;
       padding-top: 10px;
@@ -431,6 +380,12 @@
               </div>
             </div>
             <div class="stream-row">
+              <div class="stream-label">Service Providers</div>
+              <div class="stream-text">
+                <strong>Systems Growth = More Opportunity for You.</strong> When a city turns on BRYCER, they uncover previously untracked systems that now must be tested and maintained. For service providers, that visibility creates new, qualified opportunity inside markets you already serve — more systems eligible for inspections, more chances to deepen existing relationships, and more recurring work tied to required testing.
+              </div>
+            </div>
+            <div class="stream-row">
               <div class="stream-label">Customer Upsell</div>
               <div class="stream-text">
                 Monthly upsell – position BRYCER as the single source of truth for fire and life-safety systems.
@@ -474,18 +429,6 @@
           <strong>Cold, Warm, and High Intent Visibility drips</strong> all run in the last 2–3 weeks of March to close out Q1 and transition leads into Q2 Efficiency.
         </div>
       </div>
-
-      <!-- Q1 Service Provider row -->
-      <div class="sp-row">
-        <div class="sp-title">Q1 Service Provider Campaigns – Visibility</div>
-        <div class="sp-line">
-          <span class="sp-pill">February</span>
-          <strong>Systems Growth = More Opportunity for You.</strong> When a city turns on BRYCER, they uncover previously untracked systems that now must be tested and maintained. For service providers, that visibility creates new, qualified opportunity inside markets you already serve — more systems eligible for inspections, more chances to deepen existing relationships, and more recurring work tied to required testing.
-        </div>
-        <div class="sp-note">
-          Focus: Visibility as opportunity expansion, not extra burden — more systems to protect, more value you can deliver.
-        </div>
-      </div>
     </section>
 
     <!-- Q2 -->
@@ -511,6 +454,12 @@
               <div class="stream-label">Prospects</div>
               <div class="stream-text">
                 Launch <strong>Q2 Efficiency outreach</strong> – A/B emails by region & tier focused on admin overload and manual review.
+              </div>
+            </div>
+            <div class="stream-row">
+              <div class="stream-label">Service Providers</div>
+              <div class="stream-text">
+                <strong>Notifications Create Predictable Demand.</strong> When BRYCER sends automated notifications to property owners, those premises are required to get systems tested on a regular cadence. That shift creates steadier, more predictable inspection demand — fewer “fire drills” and more scheduled work your team can plan around.
               </div>
             </div>
             <div class="stream-row">
@@ -554,6 +503,12 @@
               </div>
             </div>
             <div class="stream-row">
+              <div class="stream-label">Service Providers</div>
+              <div class="stream-text">
+                <strong>Integrations & Past-Due Tracking Make Reporting Easier.</strong> BRYCER simplifies your workflow with easier report uploads, integrations that reduce double entry, and clear visibility into past-due systems. That means less time chasing paperwork and more time actually doing inspections.
+              </div>
+            </div>
+            <div class="stream-row">
               <div class="stream-label">Customer Upsell</div>
               <div class="stream-text">
                 Monthly upsell around automation and freeing up internal admin resources.
@@ -575,22 +530,6 @@
         <div class="drip-line">
           <span class="drip-pill">June · Weeks 10–12</span>
           <strong>Cold, Warm, and High Intent Efficiency drips</strong> run at the end of June, reinforcing the “remove administrative burden” story before transitioning to Q3 Compliance.
-        </div>
-      </div>
-
-      <!-- Q2 Service Provider row -->
-      <div class="sp-row">
-        <div class="sp-title">Q2 Service Provider Campaigns – Efficiency</div>
-        <div class="sp-line">
-          <span class="sp-pill">April</span>
-          <strong>Notifications Create Predictable Demand.</strong> When BRYCER sends automated notifications to property owners, those premises are required to get systems tested on a regular cadence. That shift creates steadier, more predictable inspection demand — fewer “fire drills” and more scheduled work your team can plan around.
-        </div>
-        <div class="sp-line">
-          <span class="sp-pill">June</span>
-          <strong>Integrations & Past-Due Tracking Make Reporting Easier.</strong> BRYCER simplifies your workflow with easier report uploads, integrations that reduce double entry, and clear visibility into past-due systems. That means less time chasing paperwork and more time actually doing inspections.
-        </div>
-        <div class="sp-note">
-          Focus: Make it easier to do business with BRYCER — less admin, more predictable work, better use of your team’s time.
         </div>
       </div>
     </section>
@@ -641,6 +580,12 @@
               </div>
             </div>
             <div class="stream-row">
+              <div class="stream-label">Service Providers</div>
+              <div class="stream-text">
+                <strong>Your Reports Raise Citywide Compliance.</strong> When your team submits accurate, timely reports through BRYCER, those reports convert directly into higher compliance rates across the community. BRYCER makes that work visible — reinforcing that your inspections don’t just close jobs; they improve safety outcomes and help cities hit their compliance goals.
+              </div>
+            </div>
+            <div class="stream-row">
               <div class="stream-label">Customer Upsell</div>
               <div class="stream-text">
                 Monthly upsell – use compliance lift stories as proof points.
@@ -684,18 +629,6 @@
           <strong>Cold, Warm, and High Intent Compliance drips</strong> run in late September, reinforcing jurisdiction-wide compliance outcomes and priming Q4 modernization conversations.
         </div>
       </div>
-
-      <!-- Q3 Service Provider row -->
-      <div class="sp-row">
-        <div class="sp-title">Q3 Service Provider Campaigns – Compliance</div>
-        <div class="sp-line">
-          <span class="sp-pill">August</span>
-          <strong>Your Reports Raise Citywide Compliance.</strong> When your team submits accurate, timely reports through BRYCER, those reports convert directly into higher compliance rates across the community. BRYCER makes that work visible — reinforcing that your inspections don’t just close jobs; they improve safety outcomes and help cities hit their compliance goals.
-        </div>
-        <div class="sp-note">
-          Focus: Position service providers as essential partners in improving community safety, not just vendors submitting paperwork.
-        </div>
-      </div>
     </section>
 
     <!-- Q4 -->
@@ -721,6 +654,12 @@
               <div class="stream-label">Prospects</div>
               <div class="stream-text">
                 Launch <strong>Q4 Modernization outreach</strong> – future-proofing message across regions and population tiers.
+              </div>
+            </div>
+            <div class="stream-row">
+              <div class="stream-label">Service Providers</div>
+              <div class="stream-text">
+                <strong>Modern Tools That Support Service Providers.</strong> Modernizing a city’s compliance program isn’t only about the AHJ. Service providers benefit from standardized submission requirements, fewer rejected reports, better visibility into workloads, and tools that help you stay aligned with enforcement cycles. Modernization becomes a competitive edge when you’re bidding and renewing contracts.
               </div>
             </div>
             <div class="stream-row">
@@ -764,6 +703,12 @@
               </div>
             </div>
             <div class="stream-row">
+              <div class="stream-label">Service Providers</div>
+              <div class="stream-text">
+                <strong>Year-End Service Provider Wrap-Up.</strong> Close the year by highlighting how working in BRYCER delivered clearer requirements, more predictable demand, and smoother submission workflows. Thank providers for being part of the ecosystem and preview how next year’s Visibility → Efficiency → Compliance → Modernization themes will create even more opportunity.
+              </div>
+            </div>
+            <div class="stream-row">
               <div class="stream-label">Customer Upsell</div>
               <div class="stream-text">
                 Monthly upsell – frame add-ons as part of modernizing for the new year.
@@ -785,22 +730,6 @@
         <div class="drip-line">
           <span class="drip-pill">Early December · Weeks 9–10</span>
           <strong>Cold, Warm, and High Intent Modernization drips</strong> run earlier in December to stay ahead of noisy inboxes, staffing drops, and holiday slowdowns — still end-of-quarter, just pulled slightly forward.
-        </div>
-      </div>
-
-      <!-- Q4 Service Provider row -->
-      <div class="sp-row">
-        <div class="sp-title">Q4 Service Provider Campaigns – Modernization & Wrap-Up</div>
-        <div class="sp-line">
-          <span class="sp-pill">October</span>
-          <strong>Modern Tools That Support Service Providers.</strong> Modernizing a city’s compliance program isn’t only about the AHJ. Service providers benefit from standardized submission requirements, fewer rejected reports, better visibility into workloads, and tools that help you stay aligned with enforcement cycles. Modernization becomes a competitive edge when you’re bidding and renewing contracts.
-        </div>
-        <div class="sp-line">
-          <span class="sp-pill">December</span>
-          <strong>Year-End Service Provider Wrap-Up.</strong> Close the year by highlighting how working in BRYCER delivered clearer requirements, more predictable demand, and smoother submission workflows. Thank providers for being part of the ecosystem and preview how next year’s Visibility → Efficiency → Compliance → Modernization themes will create even more opportunity.
-        </div>
-        <div class="sp-note">
-          Focus: Retain and deepen service provider relationships, and position BRYCER as the platform that makes their business easier and more successful.
         </div>
       </div>
     </section>
